<resources>
    <string name="app_name">随心运动</string>
    <string name="singin">登录</string>
    <string name="name">帐号</string>
    <string name="pass">密码</string>
    <string name="register">没有账号?立即注册</string>
    <string name="register2">注册</string>
    <string name="back">返回</string>
    <string name="confirmpass">确认密码</string>
    <string name="home">首页</string>
    <string name="search">搜运动</string>
    <string name="my">我的</string>
    <string name="adress">暂无位置信息</string>
    <string name="defaultname">未设置</string>
    <string name="nusing">未登录，点击登录</string>
    <string name="collection">收藏</string>
    <string name="release">发布</string>
    <string name="setting">设置</string>
    <string name="editsing">退出登录</string>
    <string name="mycollection">我的收藏</string>
    <string name="myrelease">我的发布</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="phone">手机号</string>
    <string name="save">保存</string>
    <string name="saveed">保存成功</string>
    <string name="addsport">添加运动</string>
    <string name="camera">拍照</string>
    <string name="xiangce">相册</string>
    <string name="unlick">取消</string>
    <string name="Videoshooting">拍摄视频</string>
    <string name="Localvideo">本地视频</string>
</resources>
