<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.runapp.Register_Activity">
    <LinearLayout
        android:id="@+id/centers"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/headimg"
            android:layout_gravity="center"
            android:text="@string/register2"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />
        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:gravity="center"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:background="@drawable/edittext_in_bg"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/pass"
            android:hint="@string/pass"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:background="@drawable/edittext_in_bg"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/Confirmpass"
            android:hint="@string/confirmpass"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:background="@drawable/edittext_in_bg"
            android:layout_marginBottom="10dp"/>
        <Button
            android:onClick="Register"
            android:text="@string/register2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/button_bg"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/register"
        android:onClick="Back"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/back"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp" />
</RelativeLayout>
