<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
   <TextView
       android:id="@+id/camera"
       android:text="@string/camera"
       android:gravity="center"
       android:textSize="20sp"
       android:textColor="@color/colorPrimaryDark"
       android:textStyle="bold"
       android:background="@drawable/edittext_in_bg_class"
       android:layout_width="match_parent"
       android:layout_height="50dp" />
    <TextView
        android:id="@+id/Album"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:background="@drawable/edittext_in_bg_class"
        android:text="@string/xiangce"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/cancel"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:background="@drawable/edittext_in_bg_class"
        android:text="@string/unlick"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>