<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.runapp.Setting_Activity">
    <TextView
        android:id="@+id/top"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/setting"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <ImageView
        android:id="@+id/register"
        android:onClick="Back"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:background="@drawable/back"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_width="30dp"
        android:layout_height="30dp" />
    <TextView
        android:id="@+id/save"
        android:onClick="Save"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_width="70dp"
        android:layout_height="30dp" />
    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:text="@string/head"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgchange"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="70dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/nickname"
        android:layout_below="@id/head"
        android:layout_width="match_parent"
        android:layout_height="75dp">
        <TextView
            android:text="@string/name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/namechange"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_width="170dp"
            android:layout_height="50dp" />

        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/name"
        android:layout_below="@id/nickname"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:text="@string/nickname"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/nicknange"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_width="170dp"
            android:layout_height="50dp" />

        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/phone"
        android:layout_below="@id/name"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:text="@string/phone"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/phonename"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_width="170dp"
            android:layout_height="50dp" />

        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/pass"
        android:layout_below="@id/phone"
        android:layout_width="match_parent"
        android:layout_height="75dp">

        <TextView
            android:text="@string/pass"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/passchange"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_width="170dp"
            android:layout_height="50dp"/>
        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>
</RelativeLayout>
