<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.runapp.MainHome">
    <TextView
        android:id="@+id/top"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/home"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <FrameLayout
        android:id="@+id/mainFramet"
        android:layout_below="@id/top"
        android:layout_above="@id/mnue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
    <RadioGroup
        android:id="@+id/mnue"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <RadioButton
            android:id="@+id/home"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:paddingTop="1dp"
            android:checked="true"
            android:drawableTop="@drawable/selector_tab_home"
            android:textColor="@drawable/selector_tab_color"
            android:text="@string/home"/>
        <RadioButton
            android:id="@+id/search"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:paddingTop="1dp"
            android:drawableTop="@drawable/selector_tab_search"
            android:textColor="@drawable/selector_tab_color"
            android:text="@string/search"/>
        <RadioButton
            android:id="@+id/my"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:button="@null"
            android:paddingTop="1dp"
            android:drawableTop="@drawable/selector_tab_my"
            android:textColor="@drawable/selector_tab_color"
            android:text="@string/my"/>
    </RadioGroup>
</RelativeLayout>
