<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/top"
        android:background="@drawable/bghead"
        android:layout_width="match_parent"
        android:layout_height="230dp">
        <ImageView
            android:id="@+id/head"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <LinearLayout
            android:layout_toRightOf="@id/head"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/defaultname"
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/sing"
                android:text="@string/nusing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="2dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Collection"
        android:layout_below="@id/top"
        android:layout_width="match_parent"
        android:layout_height="55dp">
       <ImageView
           android:src="@drawable/collon"
           android:layout_marginLeft="20dp"
           android:layout_centerVertical="true"
           android:layout_width="40dp"
           android:layout_height="40dp" />
        <TextView
            android:text="@string/collection"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/CollectionNumber"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/jiantou"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Release"
        android:layout_below="@id/Collection"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageView
            android:src="@drawable/rel"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/release"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/ReleaseNumber"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/jiantou"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Setting"
        android:layout_below="@id/Release"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageView
            android:src="@drawable/setting"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/setting"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:src="@drawable/jiantou"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:background="@color/gray"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </RelativeLayout>
</RelativeLayout>